--- a/app/globals.css
+++ b/app/globals.css
@@ -87,3 +87,25 @@
     background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
   }
 }
+
+/* 
+  width */
+  ::-webkit-scrollbar {
+  width: 10px;
+} 
+
+/* Track */
+ ::-webkit-scrollbar-track {
+  background: #161a31;
+} 
+
+/* Handle */
+ ::-webkit-scrollbar-thumb {
+  background: #cbacf9;
+  border-radius: 25px;
+} 
+
+/* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover { 
+  background: #796695;
+ } 
